# trading-app

./: .env  .gitignore  README.md  dependencies.md  docker-compose.yml  lean.json  pyproject.toml  report.html
.streamlit/: secrets.toml
alembic/: env.py
alembic/versions/: 023556f2348d_recreate_stock_price_table.py  06029131e250_add_strategy_and_stock_strategy_tables.py  06c42eb4a3ac_re_create_orders.py  092a5a42ce53_re_create_stock_table.py  0d073ec735f6_delete_timestamp_from_stock_price.py  10531f98fb46_re_create_statistics.py  288e936f1804_added_symbol_to_stock.py  29a6969efb8b_re_create_statistics.py  3808c21c53b8_added_numeric_definition.py  39276eef81f3_delete_all_tables.py  39f2842cbd4a_add_stock_price_table.py  4651addf987f_added_more_precision_to_numbers.py  49b66877e05f_adding_more_detail_to_prices.py  53c7fb131f06_add_strategy_and_stock_strategy_tables.py  58d50c1f4e6b_re_define_backest_pk.py  5aa5edc969d6_re_create_charts.py  60c243c13c0b_added_less_precision.py  6212ee492ee6_add_new_columns_to_stock_price.py  634e75e9feec_add_exchange_to_stock_table.py  63e9d6312f10_remove_trade_count.py  667648bba2f5_add_stock_price_table.py  68c1caf2d763_re_generate_tables.py  (+27 more)
async_tests/: apca_async.py  async_v1.py  async_v2.py  async_v3.py  sync.py
frontend/: main.py
templates/: backtests.html  index.html  layout.html  stock_detail.html  strategies.html  strategy_detail.html  trades.html
trading_app/: apca_fast.py  async_prices.py  async_scraper.py  config.py  cypto_data.py  database.py  main.py  models.py  populate_db.py  populate_db_au.py  populate_prices.py  populate_prices_apca.py  populate_prices_polygon.py  populate_strategies.py  reader.py  report_generator.ipynb  report_generator.py  schemas.py  scraper.py  symbol_to_df.py  trader.py  utils.py  yahoo_loader.py
(+22 files in other folders)
