[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["pampagrimaldi <pampagrimaldi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.1.12"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
