[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["pampagrimaldi <pampagrimaldi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
black = "^23.11.0"
psycopg = {extras = ["binary"], version = "^3.1.12"}
alembic = "^1.12.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
alpaca-trade-api = "^3.0.2"
polygon-api-client = "^1.13.1"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
