[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["pampagrimaldi <pampagrimaldi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
black = "^23.11.0"
alembic = "^1.12.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
alpaca-trade-api = "^3.0.2"
polygon-api-client = "^1.13.1"
tqdm = "^4.66.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
lean = "^1.0.174"
fastapi = {extras = ["all"], version = "^0.104.1"}
beautifulsoup4 = "^4.12.2"
pydevd-pycharm = ">=233.11799.259,<233.11800.0"
ptvsd = "^4.3.2"
quantconnect-stubs = "^16075"
jupyter = "^1.0.0"
ccxt = "^4.1.81"
tulipy = "^0.4.0"
yahoo-fin = "^0.8.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
